- New game mode: Detective `g*detective`!
The assassin will kill someone every night.
Citizens will kick someone out every day.
Try kicking the killer before it's too late.

- New game mode: Russian Roulette `g*roulette`!
There's 8 barrel holes and 1 bullet. Each player flips the barrel and pulls the trigger, hoping for the best.
It's a betting-based game, so you need to add a bet in the game to play it.

- You can now play minesweeper with multiple players (up to 5)!
Just add the players setting after the command (e.g. `g*minesweeper players=2` for 2 players).
You'll each have your own board, and the first to clear the bombs or last to get bombed wins!

- Slots should be less annoyingly unwinnable now.
- Games won't spam messages anymore! They bot will edit a game message up to 3 times before sending another message.
- You can now add token bets to matches! Just put `bet=amount` in the end of the game command. Bets can vary between 10 and 1500.
- Player amount is now a setting, and you can use it by adding `players=amount` in the end of your game commands.
- Fixed joining after the match is over, locking you in.

Enjoy! ~ deprilula28